tdf#169791 sw: Fix trampled ruby base text with adding selection

Handling for non-contiguous selections in the Asian Phonetic Guide was
broken by the change that introduced base text grouping. This change
restores the lost functionality.

Regression from
 commit 3d9b8701cb1751e4139ffa24f72bb836eb877fd1
 Author: Jonathan Clark <jonathan@libreoffice.org>
 Date:   Tue Sep 10 09:06:51 2024 -0600

Change-Id: Id3129f370fa72ab180f41a9816f9cd4d8718f847
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195112
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>